the middle of stage 6